--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>2.3 GP HTML Attributes</title>
+        <title>03.3 Class Selectors GP</title>
     </head>
     <body>
-        <h1>Favorite Movies at HSA McKinley Park </h1>
-        <ul>
-            <li> Mr. Sravan's favorite movie is <a href="https://www.imdb.com/title/tt3040964/">Jungle Book</a></li>
-            <li>Another favorite movie is <a href="https://www.imdb.com/title/tt0112442/">Bad Boys</a></li>
-            <li>Most recent favorite movie is <a href="https://www.imdb.com/title/tt9742794//">The Vault</a></li>
+        <h1 class="nyu">New York University</h1>
+        <p class="nyu">New York University is a private research university based in New York City. Founded in 1831 by Albert Gallatin as an institution to "admit based upon merit rather than birthright or social class", NYU's historical campus is in Greenwich Village.</p>
+        <h1 class="hc">Hunter College</h1>
+        <p class="hc">Hunter College is one of the constituent colleges of the City University of New York, a public university in New York City. The college offers studies in more than one hundred undergraduate and postgraduate fields across five schools.</p>
+        <h1 class="cu">Columbia</h1>
+        <p class="cu">Columbia University is a private Ivy League research university in New York City. Established in 1754 on the grounds of Trinity Church in Manhattan, Columbia is the oldest institution of higher education in New York and the fifth-oldest institution of higher learning in the United States.</p>
 
-
-        </ul>
     </body>
 </html>
