--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>03.3 Class Selectors GP</title>
-        <link rel="styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1 class="nyu">New York University</h1>
