--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 class="nyu">New York University</h1>
+        <h1 class="nyu">Columbia University</h1>
         <p class="nyu">New York University is a private research university based in New York City. Founded in 1831 by Albert Gallatin as an institution to "admit based upon merit rather than birthright or social class", NYU's historical campus is in Greenwich Village.</p>
         <h1 class="hc">Hunter College</h1>
         <p class="hc">Hunter College is one of the constituent colleges of the City University of New York, a public university in New York City. The college offers studies in more than one hundred undergraduate and postgraduate fields across five schools.</p>
